Add a O_CLOEXEC use missed in r323166.

PR:		199810
Reported by:	Jukka A. Ukkonen <jau789@gmail.com>
MFC after:	3 days

Former-commit-id: f19e5a322e1f058249aa283c6962084357031ace